# arxiv-at-home

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml
alembic/: env.py
alembic/versions/: d190967cb5b8_init.py
example/: api.json  index.json  sync.json
qdrant/: config.yaml
src/arxiv_at_home/api/: __main__.py  dependencies.py  dto.py  router.py  settings.py
src/arxiv_at_home/api/component/citation_provider/: base.py  factory.py  noop.py  semantic_scholar.py
src/arxiv_at_home/api/component/reranker/: config.py  factory.py  model.py  template.py
src/arxiv_at_home/api/service/: search.py
src/arxiv_at_home/common/: dto.py
src/arxiv_at_home/common/database/: config.py  manager.py
src/arxiv_at_home/common/database/repository/: __init__.py  base.py  metadata.py  sync_state.py
src/arxiv_at_home/common/dense/: config.py  factory.py  template.py  vectorizer.py
src/arxiv_at_home/common/qdrant/: config.py  factory.py
src/arxiv_at_home/index/: __main__.py  engine.py  settings.py
src/arxiv_at_home/index/component/: batch_type.py  dataset.py  populator.py
src/arxiv_at_home/migrate/: __main__.py  settings.py
src/arxiv_at_home/sync/: __main__.py  engine.py  settings.py
src/arxiv_at_home/sync/component/metadata_provider/: base.py  factory.py  json.py
