[project]
name = "arxiv-at-home"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maksim Afanasyev", email = "mr.applexz@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "backoff>=2.2.1",
    "cyclopts>=4.5.1",
    "d9d>=0.2.3",
    "fastapi>=0.128.5",
    "fastembed-gpu>=0.7.4",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "rapidfuzz>=3.14.3",
    "sqlalchemy>=2.0.46",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]


[tool.ruff]
src = ["src"]
target-version = "py311"
include = [
    "*.py"
]
exclude = [
    "alembic/**"
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
preview = true
extend-select = [
    "YTT", # flake8-2020 (misuse of sys.version)
    "ANN", # flake8-annotations (enforce type annotations)
    "ASYNC", # flake8-async (async/await best practices)
    "S", # flake8-bandit (security testing)
    "BLE", # flake8-blind-except (no "except Exception")
    "FBT003", # flake8-boolean-trap (boolean positional value in function call)
    "B", # flake8-bugbear (common bugs and design problems)
    "A", # flake8-builtins (variables shadowing python builtins)
    "COM", # flake8-commas (enforce trailing commas)
    "C4", # flake8-comprehensions (better list/set/dict comprehensions)
    "DTZ", # flake8-datetimez (ensure timezone-aware objects)
    "T10", # flake8-debugger (check for breakpoints/pdb)
    "EXE", # flake8-executable (executable permission and shebangs)
    "FA", # flake8-future-annotations (verify __future__ import)
    "INT", # flake8-gettext (f-strings in gettext calls)
    "ISC", # flake8-implicit-str-concat (ban implicit string concatenation)
    "ICN", # flake8-import-conventions (conventions like import pandas as pd)
    "LOG", # flake8-logging (logging best practices)
    "G", # flake8-logging-format (validate logging format strings)
    "INP", # flake8-no-pep420 (ban implicit-namespace packages)
    "PIE", # flake8-pie (miscellaneous lints)
    "T20", # flake8-print (check for print statements)
    "PYI", # flake8-pyi (linting for .pyi stub files)
    "PT", # flake8-pytest-style (pytest best practices)
    "Q", # flake8-quotes (quote consistency)
    "RET", # flake8-return (checks for return values)
    "SLF", # flake8-self (private member access)
    "SIM", # flake8-simplify (suggests code logic simplifications)
    "SLOT", # flake8-slots (require __slots__ in subclasses)
    "TD", # flake8-todos (validate TODO comment adherence)
    "TC", # flake8-type-checking (move imports to type-checking blocks)
    "PTH", # flake8-use-pathlib (prefer pathlib over os.path)
    "FLY", # flynt (convert legacy format to f-strings)
    "I", # isort (sorting imports)
    "C90", # mccabe (cyclomatic complexity)
    "N", # pep8-naming (check naming conventions)
    "PERF102", # Perflint (incorrect dict iterator)
    "PERF203", # Perflint (try-except in loop overhead)
    "PERF402", # Perflint (manual list copy)
    "E", # pycodestyle (standard errors)
    "W", # pycodestyle (standard warnings)
    "F", # Pyflakes (logical errors, unused variables)
    "PGH", # pygrep-hooks (regex-based hooks)
    "PLC", # Pylint (convention)
    "PLE", # Pylint (errors)
    "PLR", # Pylint (refactor)
    "PLW", # Pylint (warnings)
    "UP", # pyupgrade (upgrade syntax to newer python versions)
    "FURB", # refurb (modernize and refine code)
    "RUF", # Ruff-specific rules
    "TRY"      # tryceratops (exception handling antipatterns)
]
fixable = [
    "F401",
    "UP035",
    "I001",
    "E302",
    "E303",
    "Q000",
    "RUF022",
    "W292",
    "W293",
    "W391"
]
ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "COM812", # we do not use trailing commas everywhere
    "C420", # Unnecessary dict comprehension for iterable; use dict.fromkeys instead
    "C416", # Unnecessary {kind} comprehension (rewrite using {kind}())
    "G004", # Logging statement uses f-string
    "PIE808", #  	Unnecessary start argument in range
    "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
    "PT012", # pytest.raises() block should contain a single simple statement
    "RET504", # Unnecessary assignment to {name} before return statement
    "RET505", # Unnecessary {branch} after return statement
    "SIM103", # Return the condition {condition} directly
    "SIM108", # Use ternary operator {contents} instead of if-else-bloc
    "TC002", # Move third-party import {} into a type-checking block
    "TC003",  # Move standard library import {} into a type-checking block
    "TC001", # Move own import into a type-checking block
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLR6301", # Method {method_name} could be a function, class method, or static method
    "PLR0904", # Too many
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0916",
    "PLR0917",
    "PLR6104", # Use {operator} to perform an augmented assignment directly
    "FURB118", # Use operator.{operator} instead of defining a {target}
    "FURB140", # Use itertools.starmap instead of the generator
    "TRY003", # Avoid specifying long messages outside the exception class
    "TC006", # Add quotes to type expression in typing.cast()
    "TRY004", # Prefer TypeError exception for invalid type
    "PGH003",  # Use specific rule codes when ignoring {} issues
    "ASYNC240",  # Async functions should not use pathlib.Path methods, use trio.Path or anyio.path
]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
exclude = [
    "alembic/**"
]


[tool.semantic_release]
allow_zero_version = true
major_on_zero = true
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.remote]
type = "github"
